<resources>
    <string name="app_name">HWeat</string>
    <string name="rule_title">隱私權政策\n</string>
    <string name="rule_content">
HWeat應用程式(以下簡稱「HWeat」)非常重視您的隱私權。為確保網際網路使用者在使用「HWeat」時的隱私權，故訂定此隱私權說明，藉以協助您瞭解「HWeat」如何保護您所提供的個人資訊，以及如何蒐集、處理及運用您所提供的各項資訊。請您詳讀下列內容，以促進您安心使用「HWeat」的各項貼心服務。同時，「HWeat」所蒐集到的個人資料，除其他法律另有規定者外，謹遵守「個人資料保護法」之規範辦理。

我們已採取符合法規要求的實體、電子和程序防護措施，以保護您個人資料的安全。當用戶透過「HWeat」提供個人資訊，所有資訊將被安置在一個安全的內部數據庫。為了防止未經授權的訪問，丟失或誤用，保持數據的準確性，並確保適當使用信息，我們已在物理，電子和管理程序等各方面，致力維護和保護個人信息。「HWeat」採用行業標準技術，如防火牆，以努力保護您的個人資訊的保密性。此外，我們加密傳輸給我們重要資訊（如帳號密碼和支付相關的身份證資訊）通過SSL（安全套接字層）高度保護隱私和資訊的完整性。
１、隱私權政策宣示適用範圍

以下的隱私權政策，適用於您在「HWeat」活動時，所涉及的個人資料蒐集、運用與保護，但不適用於其他非「HWeat」所有或控制的公司軟體或網站，或非「HWeat」僱用或管理之人。凡經由「HWeat」連結之其他軟體或網站，均有其專屬之隱私權政策，「HWeat」不負任何連帶責任。當您連結這些軟體或網站時，關於個人資料的保護，適用各該軟體或網站的隱私權政策。
２、總論

(1) 隱私權保護政策內容包括「HWeat」如何處理由用戶使用「HWeat」服務時所收集到的身份識別資料，也包括「HWeat」如何處理在商業伙伴與「HWeat」合作時分享的任何身份識別資料。

(2) 個人資料是指可辨識、或可用於辨識您的身份，並被提交至「HWeat」和（或）由「HWeat」收集的資料。例如：個人姓名、郵遞地址、電子郵件位址及電話號碼等。本政策不適用於非 HWeat 所有或控制的公司，也不適用於非 HWeat 僱用或管理之人。
３、個人資料蒐集與使用
(1) 資料蒐集

1. 在您註冊「HWeat」帳號、使用「HWeat」產品或服務、瀏覽「HWeat」網頁或某些合作夥伴的網頁，以及參加宣傳活動或贈獎遊戲時，「HWeat」會蒐集您的個人資料。「HWeat」也可能從商業夥伴或其他公司處取得您的個人資料，並將這些資料與「HWeat」所擁有的您的個人資料相結合。

2. 蒐集方式
(1) 當使用者註冊時，我們會蒐集您的姓名、地址、電話、電子郵遞地址、網路平台申請之帳號(如facebook、Google等)、申辦查詢服務之紀錄(C001)、金融機構帳戶及其影本、信用卡相關資料(C002)、身分證統一編號、護照號碼 (C003)、年齡、性別、國籍、出生年月日(C011)等資料。

(2) 「HWeat」也自動接收並記錄您電腦、瀏覽器、行動應用裝置上的資料。電腦和瀏覽器的資料包括 IP位址、「HWeat」 cookie(C132)中的資料、軟體和硬體屬性、您瀏覽的網頁紀錄。行動應用裝置上的資料包含電信商資料、連線網際網路的方式、軟體和硬體屬性、目前位置之地理資訊。

(2) 「HWeat」將個人資料用作以下用途：

1. 客製化廣告及您看到的網頁內容、滿足您對產品和服務的要求、改進我們的服務、聯絡您、進行研究，以及提供內部及外部客戶匿名報告。

2. 「HWeat」蒐集您個人資料之目的係為確認身分及建立您的會員資料檔案，並提供您所申請的服務。法定特定目的為：040行銷、052會員管理、063非公務機關依法定義務所進行個人資料之蒐集處理及利用、069契約、類似契約或其他法律關係事務、090消費者、客戶管理與服務、091消費者保護、135資(通)訊服務、136資(通)訊與資料庫管理、157調查、統計與研究分析、181其他經營合於營業登記項目或組織章程所定之業務。除法令另有規定外，「HWeat」及相關服務所取得的個人資料，在您註冊成為會員的期間內，於「HWeat」業務營運所及的中華民國境內和未受主管機關禁止國際傳輸的境外地區，僅在為達上述蒐集個資目的的必要範圍內，以下列之方式利用：
(1) 以會員身份使用「HWeat」提供之各項服務時，於頁面中自動顯示會員資訊。

(2) 用於物品寄送：於交寄相關商品時將您的個人資料利用於交付給相關物流或郵寄廠商以便完成物品的寄送。

(3) 用於金融交易及授權：您所提供之財務相關資訊，將於金融交易過程(如信用卡授權、轉帳)時提交給金融機構以完成金融交易。如交易爭議發生時，將揭露您的連絡資料及交易相關資料予為完成「HWeat」提供之各項交易服務之合作金融機構或交易代收代付業者(如揭露連絡電話確認消費事實)。

(4) 宣傳廣告或行銷：提供您各種會員條款、公告等資訊，透過電子郵件、電話、寄發DM、簡訊、EDM等方式提供與「HWeat」服務有關之資訊及合作廠商最新合作活動通知。將會員所瀏覽之內容或廣告，依客戶之個人屬性或購買紀錄、「HWeat」之瀏覽紀錄等項目，進行個人化作業、會員使用服務之分析、新服務之開發或既有服務之改善等。針對民調、活動、留言版等之意見，或其他服務關連事項，與會員進行聯繫。如您欲拒絕宣傳廣告或行銷通知，您可利用電子郵件，向「HWeat」取消。

(5) 回覆客戶之詢問：針對您透過線上回報、電子郵件、郵件、傳真、簡訊、電話或其他任何直接間接連絡方式向「HWeat」所提出之詢問進行回覆。

(6) 電子發票：「HWeat」基於配合財政部電子發票整合服務之特定目的內，電子發票相關資料將上傳至財政部電子發票整合服務平台，供其於電子發票目的內處理利用。

(7) 其他業務附隨之事項：附隨於上述利用方式而為「HWeat」提供服務所必要之使用。

(8) 其他：提供個別服務時，亦可能於上述利用之方式以外，利用個人資料。此時將在該個別服務之網頁載明其要旨。

3. 資料分享與揭露
(1) 本網站絕不會任意出售、交換、或出租任何您的個人資料給其他團體、個人或私人企業。但有下列情形者除外：
A. 配合司法單位合法的調查。
B. 配合相關職權機關依職務需要之調查或使用。
C. 基於善意相信揭露為法律需要，或為維護和改進網站服務而用於管理。

(2) 除非是為了向您提供您所要求的產品或服務、獲得您的授權，或有以下情形，否則 「HWeat」 不會向任何其他人士或非關係企業出借或出售您的個人資料，或與之分享：
A. 我們向已簽署保密協議書之代表 「HWeat」 執行業務或與我們共事的值得信賴的合作夥伴提供這些資料。這些公司可能會將您的個人資料用於協助 「HWeat」 就我們和行銷夥伴所提供產品及服務的事宜，與您進行溝通，但這些公司無權利分享這些資料。
B. 如果 「HWeat」 被其他公司收購或合併，我們會將您的個人資料移轉給該公司。如果發生這種情況，「HWeat」 會在您的個人資料被移轉且將適用不同的隱私權政策前通知您。
C. 「HWeat」會根據您的個人資料向您展示精準式行銷廣告。廣告主 (包括廣告遞送公司) 可能假定那些瀏覽、點閱精準式行銷廣告或與廣告互動的人士符合精準式行銷標準，例如特定地理區域內特定年齡層的男性或女性。在您瀏覽精準式行銷廣告或與廣告發生互動時，「HWeat」 不會向廣告主提供您的任何個人資料。然而，一旦瀏覽廣告或與廣告發生互動，即表示您同意廣告主可能會假定您符合展示型廣告所使用的精準式行銷標準。
４、Cookie之使用個人資料蒐集與使用

(1) 「HWeat」 會存取網站內外與產品及服務有關的cookie。我們使用cookies來追蹤瀏覽「HWeat」的用戶（如瀏覽的網頁、瀏覽「HWeat」的時間、以及瀏覽「HWeat」前與之後瀏覽的網站等）進行統計和市場調查的目的，這是在被允許而且匿名狀態下收集的資訊。我們使用cookies來收集有關「HWeat」用戶的瀏覽器活動，用來改善「HWeat」，以提供更好的客戶服務這些資訊也將幫助我們設計和安排我們的網頁在一個最方便的方式，不斷地改進本網站內容，以滿足廣大客戶的需求。而您仍可以透過修改瀏覽器的喜好設定，選擇或拒絕所有的cookies，但是，將可能在您瀏覽本網站時，會影響某些功能或無法使用。

(2) 「HWeat」允許在某些「HWeat」網頁上刊登廣告的其他公司在您的電腦上設定並存取 cookie。但其他公司將根據其自訂的隱私權政策使用其cookie，並非依據本政策。

(3) 廣告主或其他公司不能存取「HWeat」的cookie。
5、 隱私權政策修訂及當事人權利行使：
(1) 您可隨時修改個人 「HWeat」 帳號資料，我們保有權利向您傳送「HWeat」 服務相關的特定訊息 (如服務公告、管理訊息)，這些訊息被視為您 「HWeat」 帳號的一部分，您無法選擇退出接收。

(2) 隨政府法令或市場環境改變，「HWeat」將不定時修訂隱私權政策。當我們在個人資料的處理上有重大變更時，會將通知傳送到您在 「HWeat」 帳號中指定的主要電子郵件地址，或在行動應用裝置app中以張貼告示或推播訊息的方式進行通知。若您對「HWeat」個人資料保護事項或隱私權政策有疑問或您依照個人資料保護法第三條欲行使以下權利時，你可使用電子郵件方式接洽「HWeat」。

(3) 您可依照個人資料保護法第三條行使以下權利：
1. 查詢或請求閱覽。
2. 請求製給複製本。
3. 請求補充或更正。
4. 請求停止蒐集、處理或利用
5. 請求刪除。

6、 儲存的個人資訊和安全：

(1) 只有員工在需要查閱用戶個人資訊來履行自己的職責時，被授予查閱個人身份資訊。而未經授權的查閱或使用這些個人資訊的員工，將構成紀律處分的理由，我們的資訊管理系統的配置亦以這樣的方式，以阻止或禁止員工查閱用戶個人資訊。

(2) 我們值得信賴的供應商和商業夥伴負責處理或處理一些資訊，將可能查閱到用戶個人資訊，但這些供應商和商業夥伴無權使用這些個人資訊，且不得保存，而為了保持機密性，我們將不會提供必要之外的資訊。

(3) 為保障您的隱私及安全，您的帳號資料會用密碼保護，雖然我們致力保障用戶個人資訊，但若您自願在線上透露各種個人資料，該資訊可能會被其他人收集或使用。若為我們無法控制的因素導致洩露個人資訊，我們不承擔任何保證或申述以維護或保密的任何個人信息收集的用戶、潛在用戶或訪客。
7、 隱私權政策之適用地區

「HWeat」主要在台灣進行相關業務之推展，故「HWeat」之經營管理政策，係根據中華民國之法令。如果您從台灣（台、澎、金、馬）以外地區使用我們的服務，即表示您同意個人資訊處理的方式，將根據中華民國之法令規範。此外，台灣在個人資料相關法律規範可能不同於別國之法律，因此可能無法為您提供與您所在國家相同的權利及法令保護。
8、 問題和建議

如果您有任何問題或建議，請透過客服信箱與我們聯繫。</string>
    <string name="button_koreanish">韓式</string>
    <string name="button_japanish">日式</string>
    <string name="button_chinesish">中式</string>
    <string name="button_fastfood">速食</string>
    <string name="button_spicy">辣</string>
    <string name="button_italish">義式</string>
    <string name="button_drink">飲料</string>
    <string name="button_desert">甜點</string>
    <string name="button_favor_confirm">確認</string>
    <string name="title_activity_drawer">drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="store">丹丹漢堡西子灣店\n(07)5330573</string>
    <string name="tel">(07)5330573</string>
</resources>
