<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e4dace"
    tools:context=".LikeActivity">

    <TextView
        android:id="@+id/favor"
        android:layout_width="280dp"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="請點選您所喜好的類別（可選擇多個）"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/button_favor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_koreanish"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_favor_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favor"
        app:layout_constraintVertical_bias="0.203" />

    <CheckBox
        android:id="@+id/button_favor5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="436dp"
        android:text="@string/button_spicy"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"

        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/button_favor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:text="@string/button_japanish"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button_favor_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_favor1"
        app:layout_constraintVertical_bias="0.057" />

    <CheckBox
        android:id="@+id/button_favor6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="342dp"
        android:text="@string/button_italish"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"

        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/button_favor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/button_chinesish"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_favor2"
        app:layout_constraintVertical_bias="0.071" />

    <CheckBox
        android:id="@+id/button_favor7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="246dp"
        android:text="@string/button_drink"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"

        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/button_favor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_fastfood"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_favor2"
        app:layout_constraintVertical_bias="0.408" />

    <CheckBox
        android:id="@+id/button_favor8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:text="@string/button_desert"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_favor_confirm"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="#283b42"
        android:text="@string/button_favor_confirm"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>